--- a/profile.html
+++ b/profile.html
@@ -58,19 +58,29 @@
 						<h1>DENTISTS</h1>
 						<p>Practitioners who specializes in the diagnosis, prevention, and treatment of diseases and conditions of the oral cavity</p>
 
+						<div id="photo-border">
 						<img src="http://www.meddy.co/docpic/%205/">
+						</div>
 						<p>Dr. Mohamad Ghadir Taraben</p>
 
+						<div id="photo-border">
 						<img src="http://www.meddy.co/docpic/%206/">
+						</div>
 						<p>Dr. Imad Rustom</p>
 
+						<div id="photo-border">
 						<img src="http://www.meddy.co/docpic/%207/">
+						</div>
 						<p>Dr. Talal Rane</p>
 
+						<div id="photo-border">
 						<img src="http://www.meddy.co/docpic/%208/">
+						</div>
 						<p>Dr. Rabab Maziad Jaber</p>
 
+						<div id="photo-border">
 						<img src="http://www.meddy.co/docpic/%209/">
+						</div>
 						<p>Dr. Yukti Nautiyal</p>
 
 					</div>
@@ -121,4 +131,4 @@
 		</div>
 	</div>
 </body>
-</html>>
+</html>
